@@ -1545,7 +1545,7 @@ $command = "$LD -o $MODULE-scan $o_file $LDFLAGS";
 system($command) == 0 or die "Linking of scanner failed: $!\n";
 
 print "gtk-doc: Running scanner $MODULE-scan\n";
-system("sh -c ./$MODULE-scan") == 0 or die "Scan failed: $!\n";
+system("$ENV{RUN} ./$MODULE-scan") == 0 or die "Scan failed: $!\n";
 
 unlink "./$MODULE-scan.c", "./$MODULE-scan.o", "./$MODULE-scan.lo", "./$MODULE-scan";
 
